--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 				<a href="#why" id="why" style="color: inherit; text-decoration: none;">
 					<h2>Why?</h2>
 				</a>
-				<p>This is ultimately just a <a href="https://svelte.dev/examples#custom-stores">custom store</a> built on top of <a href="https://svelte.dev/docs#svelte_store">svelte/store</a>. Like the rest of Svelte, the built in stores are excellent building blocks that aim to give you all the tools you need without trying to solve every single scenario out of the box.</p>
+				<p>This is ultimately just a <a href="https://svelte.dev/examples/custom-stores">custom store</a> built on top of <a href="https://svelte.dev/docs/svelte-store">svelte/store</a>. Like the rest of Svelte, the built in stores are excellent building blocks that aim to give you all the tools you need without trying to solve every single scenario out of the box.</p>
 				<p>The goal with <code>svelte-entity-store</code> is to provide a simple, generic solution for storing collections of entity objects. Throwing an array of items into a basic <code>writeble</code> store doesn&#39;t scale well if you have a lot of items and need to quickly find or update one item in the store.</p>
 				<a href="#install" id="install" style="color: inherit; text-decoration: none;">
 					<h2>Install</h2>
 				</a>
-				<pre><code><span style="color: #001080">npm</span><span style="color: #000000"> </span><span style="color: #001080">install</span><span style="color: #000000"> https:</span><span style="color: #008000">//github.com/AminoffZ/svelte-entity-store/releases/download/v1.0.4/svelte-entity-store-1.0.4.tgz</span>
+				<pre><code><span style="color: #001080">npm</span><span style="color: #000000"> </span><span style="color: #001080">install</span><span style="color: #000000"> https:</span><span style="color: #008000">//github.com/AminoffZ/svelte-entity-store/releases/download/v1.0.5/svelte-entity-store-1.0.5.tgz</span>
 </code></pre>
 				<a href="#usage" id="usage" style="color: inherit; text-decoration: none;">
 					<h2>Usage</h2>
