--- a/modules/entity_store.html
+++ b/modules/entity_store.html
@@ -92,7 +92,7 @@
 					<div class="tsd-signature tsd-kind-icon">Entity<wbr>Store&lt;T&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>subscribe<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Subscribe</span><span class="tsd-signature-symbol">&lt;</span><a href="internal_normalize.html#normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">; </span>get<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">; </span>getActive<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">; </span>getActiveId<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">; </span>remove<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">; </span>reset<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">; </span>set<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">; </span>setActive<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">; </span>update<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L22">entity-store.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L23">entity-store.ts:23</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -129,7 +129,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L28">entity-store.ts:28</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L29">entity-store.ts:29</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -143,7 +143,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L36">entity-store.ts:36</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L37">entity-store.ts:37</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -166,7 +166,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L45">entity-store.ts:45</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L46">entity-store.ts:46</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -190,7 +190,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L54">entity-store.ts:54</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L55">entity-store.ts:55</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -222,7 +222,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L68">entity-store.ts:68</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L69">entity-store.ts:69</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -244,7 +244,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L61">entity-store.ts:61</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L62">entity-store.ts:62</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -270,7 +270,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L75">entity-store.ts:75</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L76">entity-store.ts:76</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -292,7 +292,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L82">entity-store.ts:82</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L83">entity-store.ts:83</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -314,7 +314,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L89">entity-store.ts:89</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L90">entity-store.ts:90</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -336,7 +336,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L96">entity-store.ts:96</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L97">entity-store.ts:97</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -358,7 +358,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L103">entity-store.ts:103</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L104">entity-store.ts:104</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -388,7 +388,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L108">entity-store.ts:108</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L109">entity-store.ts:109</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -410,7 +410,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L115">entity-store.ts:115</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L116">entity-store.ts:116</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -432,7 +432,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L122">entity-store.ts:122</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L123">entity-store.ts:123</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -463,7 +463,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L129">entity-store.ts:129</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L130">entity-store.ts:130</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -485,7 +485,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L136">entity-store.ts:136</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L137">entity-store.ts:137</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -520,7 +520,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L148">entity-store.ts:148</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L149">entity-store.ts:149</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -542,7 +542,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L156">entity-store.ts:156</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L157">entity-store.ts:157</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -570,7 +570,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L164">entity-store.ts:164</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L165">entity-store.ts:165</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -598,7 +598,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L172">entity-store.ts:172</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L173">entity-store.ts:173</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -626,7 +626,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L180">entity-store.ts:180</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L181">entity-store.ts:181</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -654,7 +654,7 @@
 									<li class="tsd-description">
 										<aside class="tsd-sources">
 											<ul>
-												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L188">entity-store.ts:188</a></li>
+												<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L189">entity-store.ts:189</a></li>
 											</ul>
 										</aside>
 										<div class="tsd-comment tsd-typography">
@@ -699,7 +699,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L304">entity-store.ts:304</a></li>
+									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L306">entity-store.ts:306</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -737,7 +737,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L305">entity-store.ts:305</a></li>
+									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L307">entity-store.ts:307</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
@@ -760,7 +760,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L306">entity-store.ts:306</a></li>
+									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/entity-store.ts#L308">entity-store.ts:308</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
@@ -810,6 +810,9 @@
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="internal_hydrate_store.html">internal/hydrate-<wbr>store</a>
+					</li>
+					<li class=" tsd-kind-module">
+						<a href="internal_load_active_id.html">internal/load-<wbr>active-<wbr>id</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="internal_normalize.html">internal/normalize</a>
