--- a/modules/internal_set_active_entity.html
+++ b/modules/internal_set_active_entity.html
@@ -178,6 +178,9 @@
 						<a href="internal_hydrate_store.html">internal/hydrate-<wbr>store</a>
 					</li>
 					<li class=" tsd-kind-module">
+						<a href="internal_load_active_id.html">internal/load-<wbr>active-<wbr>id</a>
+					</li>
+					<li class=" tsd-kind-module">
 						<a href="internal_normalize.html">internal/normalize</a>
 					</li>
 					<li class=" tsd-kind-module">
