--- a/index.html
+++ b/index.html
@@ -256,6 +256,9 @@
 						<a href="modules/internal_hydrate_store.html">internal/hydrate-<wbr>store</a>
 					</li>
 					<li class=" tsd-kind-module">
+						<a href="modules/internal_load_active_id.html">internal/load-<wbr>active-<wbr>id</a>
+					</li>
+					<li class=" tsd-kind-module">
 						<a href="modules/internal_normalize.html">internal/normalize</a>
 					</li>
 					<li class=" tsd-kind-module">
