--- a/modules/internal_load_active_id.html
+++ b/modules/internal_load_active_id.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>index | svelte-entity-store</title>
+	<title>internal/load-active-id | svelte-entity-store</title>
 	<meta name="description" content="Documentation for svelte-entity-store">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -55,10 +55,10 @@
 					<a href="../modules.html">svelte-entity-store</a>
 				</li>
 				<li>
-					<a href="index.html">index</a>
+					<a href="internal_load_active_id.html">internal/load-active-id</a>
 				</li>
 			</ul>
-			<h1>Module index</h1>
+			<h1>Module internal/load-active-id</h1>
 		</div>
 	</div>
 </header>
@@ -70,20 +70,61 @@
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>References</h3>
+							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="index.html#entitystore" class="tsd-kind-icon">entity<wbr>Store</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter"><a href="internal_load_active_id.html#loadactiveid" class="tsd-kind-icon">load<wbr>Active<wbr>Id</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
-				<h2>References</h2>
-				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-module">
-					<a name="entitystore" class="tsd-anchor"></a>
-					<h3>entity<wbr>Store</h3>
-					Re-exports <a href="entity_store.html#entitystore-1">entityStore</a>
+				<h2>Functions</h2>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
+					<a name="loadactiveid" class="tsd-anchor"></a>
+					<h3>load<wbr>Active<wbr>Id</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
+						<li class="tsd-signature tsd-kind-icon">load<wbr>Active<wbr>Id&lt;T&gt;<span class="tsd-signature-symbol">(</span>storageKey<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in internal/load-active-id.ts:12</li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Loads the active ID from local storage if it exists and returns it.</p>
+								</div>
+								<dl class="tsd-comment-tags">
+									<dt>throws</dt>
+									<dd><p>Error if the stored value cannot be parsed</p>
+									</dd>
+									<dt>throws</dt>
+									<dd><p>Error if the environment does not support local storage</p>
+									</dd>
+								</dl>
+							</div>
+							<h4 class="tsd-type-parameters-title">Type parameters</h4>
+							<ul class="tsd-type-parameters">
+								<li>
+									<h4>T</h4>
+								</li>
+							</ul>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>storageKey: <span class="tsd-signature-type">string</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>Key to use for local storage</p>
+									</div>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h4>
+							<p>Active ID if it exists, otherwise undefined</p>
+						</li>
+					</ul>
 				</section>
 			</section>
 		</div>
@@ -96,7 +137,7 @@
 					<li class=" tsd-kind-module">
 						<a href="entity_store.html">entity-<wbr>store</a>
 					</li>
-					<li class="current tsd-kind-module">
+					<li class=" tsd-kind-module">
 						<a href="index.html">index</a>
 					</li>
 					<li class=" tsd-kind-module">
@@ -111,7 +152,7 @@
 					<li class=" tsd-kind-module">
 						<a href="internal_hydrate_store.html">internal/hydrate-<wbr>store</a>
 					</li>
-					<li class=" tsd-kind-module">
+					<li class="current tsd-kind-module">
 						<a href="internal_load_active_id.html">internal/load-<wbr>active-<wbr>id</a>
 					</li>
 					<li class=" tsd-kind-module">
@@ -139,8 +180,8 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-reference tsd-parent-kind-module">
-						<a href="index.html#entitystore" class="tsd-kind-icon">entity<wbr>Store</a>
+					<li class=" tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
+						<a href="internal_load_active_id.html#loadactiveid" class="tsd-kind-icon">load<wbr>Active<wbr>Id</a>
 					</li>
 				</ul>
 			</nav>
