--- a/modules/internal_normalize.html
+++ b/modules/internal_normalize.html
@@ -148,7 +148,7 @@
 					<a name="normalize" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagConst">Const</span> normalize</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-						<li class="tsd-signature tsd-kind-icon">normalize&lt;T&gt;<span class="tsd-signature-symbol">(</span>getID<span class="tsd-signature-symbol">: </span><a href="shared.html#getid" class="tsd-signature-type" data-tsd-kind="Type alias">GetID</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span>items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="internal_normalize.html#normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">normalize&lt;T&gt;<span class="tsd-signature-symbol">(</span>getID<span class="tsd-signature-symbol">: </span><a href="shared.html#getid" class="tsd-signature-type" data-tsd-kind="Type alias">GetID</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span>, activeId<span class="tsd-signature-symbol">?: </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span>items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="internal_normalize.html#normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -178,6 +178,9 @@
 									<div class="tsd-comment tsd-typography">
 										<p>Function that returns the ID of an entity</p>
 									</div>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> activeId: <a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-symbol">(</span>items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="internal_normalize.html#normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -228,6 +231,9 @@
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="internal_hydrate_store.html">internal/hydrate-<wbr>store</a>
+					</li>
+					<li class=" tsd-kind-module">
+						<a href="internal_load_active_id.html">internal/load-<wbr>active-<wbr>id</a>
 					</li>
 					<li class="current tsd-kind-module">
 						<a href="internal_normalize.html">internal/normalize</a>
