--- a/modules/internal_normalize.html
+++ b/modules/internal_normalize.html
@@ -230,10 +230,10 @@
 						<a href="internal_get_entities.html">internal/get-<wbr>entities</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="internal_hydrate_store.html">internal/hydrate-<wbr>store</a>
+						<a href="internal_hydrate_active_id.html">internal/hydrate-<wbr>active-<wbr>id</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="internal_load_active_id.html">internal/load-<wbr>active-<wbr>id</a>
+						<a href="internal_hydrate_entities.html">internal/hydrate-<wbr>entities</a>
 					</li>
 					<li class="current tsd-kind-module">
 						<a href="internal_normalize.html">internal/normalize</a>
