--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
 						<a href="modules/internal_get_entities.html">internal/get-<wbr>entities</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/internal_hydrate_store.html">internal/hydrate-<wbr>store</a>
+						<a href="modules/internal_hydrate_active_id.html">internal/hydrate-<wbr>active-<wbr>id</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/internal_load_active_id.html">internal/load-<wbr>active-<wbr>id</a>
+						<a href="modules/internal_hydrate_entities.html">internal/hydrate-<wbr>entities</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="modules/internal_normalize.html">internal/normalize</a>
