--- a/modules.html
+++ b/modules.html
@@ -69,8 +69,8 @@
 								<li class="tsd-kind-module"><a href="modules/internal_get_active_entity.html" class="tsd-kind-icon">internal/get-<wbr>active-<wbr>entity</a></li>
 								<li class="tsd-kind-module"><a href="modules/internal_get_active_entity_id.html" class="tsd-kind-icon">internal/get-<wbr>active-<wbr>entity-<wbr>id</a></li>
 								<li class="tsd-kind-module"><a href="modules/internal_get_entities.html" class="tsd-kind-icon">internal/get-<wbr>entities</a></li>
-								<li class="tsd-kind-module"><a href="modules/internal_hydrate_store.html" class="tsd-kind-icon">internal/hydrate-<wbr>store</a></li>
-								<li class="tsd-kind-module"><a href="modules/internal_load_active_id.html" class="tsd-kind-icon">internal/load-<wbr>active-<wbr>id</a></li>
+								<li class="tsd-kind-module"><a href="modules/internal_hydrate_active_id.html" class="tsd-kind-icon">internal/hydrate-<wbr>active-<wbr>id</a></li>
+								<li class="tsd-kind-module"><a href="modules/internal_hydrate_entities.html" class="tsd-kind-icon">internal/hydrate-<wbr>entities</a></li>
 								<li class="tsd-kind-module"><a href="modules/internal_normalize.html" class="tsd-kind-icon">internal/normalize</a></li>
 								<li class="tsd-kind-module"><a href="modules/internal_persist_store.html" class="tsd-kind-icon">internal/persist-<wbr>store</a></li>
 								<li class="tsd-kind-module"><a href="modules/internal_remove_entities.html" class="tsd-kind-icon">internal/remove-<wbr>entities</a></li>
@@ -106,10 +106,10 @@
 						<a href="modules/internal_get_entities.html">internal/get-<wbr>entities</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/internal_hydrate_store.html">internal/hydrate-<wbr>store</a>
+						<a href="modules/internal_hydrate_active_id.html">internal/hydrate-<wbr>active-<wbr>id</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/internal_load_active_id.html">internal/load-<wbr>active-<wbr>id</a>
+						<a href="modules/internal_hydrate_entities.html">internal/hydrate-<wbr>entities</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="modules/internal_normalize.html">internal/normalize</a>
