--- a/modules/internal_hydrate_active_id.html
+++ b/modules/internal_hydrate_active_id.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>internal/hydrate-store | svelte-entity-store</title>
+	<title>internal/hydrate-active-id | svelte-entity-store</title>
 	<meta name="description" content="Documentation for svelte-entity-store">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -55,10 +55,10 @@
 					<a href="../modules.html">svelte-entity-store</a>
 				</li>
 				<li>
-					<a href="internal_hydrate_store.html">internal/hydrate-store</a>
+					<a href="internal_hydrate_active_id.html">internal/hydrate-active-id</a>
 				</li>
 			</ul>
-			<h1>Module internal/hydrate-store</h1>
+			<h1>Module internal/hydrate-active-id</h1>
 		</div>
 	</div>
 </header>
@@ -72,7 +72,7 @@
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter"><a href="internal_hydrate_store.html#hydratestore" class="tsd-kind-icon">hydrate<wbr>Store</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter"><a href="internal_hydrate_active_id.html#hydrateactiveid" class="tsd-kind-icon">hydrate<wbr>Active<wbr>Id</a></li>
 							</ul>
 						</section>
 					</div>
@@ -81,24 +81,30 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-					<a name="hydratestore" class="tsd-anchor"></a>
-					<h3>hydrate<wbr>Store</h3>
+					<a name="hydrateactiveid" class="tsd-anchor"></a>
+					<h3>hydrate<wbr>Active<wbr>Id</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-						<li class="tsd-signature tsd-kind-icon">hydrate<wbr>Store&lt;T&gt;<span class="tsd-signature-symbol">(</span>storageKey<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, fallbackValue<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span></li>
-						<li class="tsd-signature tsd-kind-icon">hydrate<wbr>Store&lt;T&gt;<span class="tsd-signature-symbol">(</span>storageKey<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, fallbackValue<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span></li>
+						<li class="tsd-signature tsd-kind-icon">hydrate<wbr>Active<wbr>Id&lt;T&gt;<span class="tsd-signature-symbol">(</span>storageKey<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/internal/hydrate-store.ts#L10">internal/hydrate-store.ts:10</a></li>
+									<li>Defined in internal/hydrate-active-id.ts:12</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Hydrates an entity from local storage if it exists and returns it.
-									If it doesn&#39;t exist, returns the fallback value.</p>
+									<p>Loads the active ID from local storage if it exists and returns it.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>throws</dt>
+									<dd><p>Error if the stored value cannot be parsed</p>
+									</dd>
+									<dt>throws</dt>
+									<dd><p>Error if the environment does not support local storage</p>
+									</dd>
+								</dl>
 							</div>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
 							<ul class="tsd-type-parameters">
@@ -114,49 +120,9 @@
 										<p>Key to use for local storage</p>
 									</div>
 								</li>
-								<li>
-									<h5>fallbackValue: <span class="tsd-signature-type">T</span></h5>
-									<div class="tsd-comment tsd-typography">
-										<p>Value to return if no entity is found</p>
-									</div>
-								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">T</span></h4>
-						</li>
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/internal/hydrate-store.ts#L20">internal/hydrate-store.ts:20</a></li>
-								</ul>
-							</aside>
-							<div class="tsd-comment tsd-typography">
-								<div class="lead">
-									<p>Hydrates entities from local storage if they exist and returns them.
-									If they don&#39;t exist, returns the fallback value.</p>
-								</div>
-							</div>
-							<h4 class="tsd-type-parameters-title">Type parameters</h4>
-							<ul class="tsd-type-parameters">
-								<li>
-									<h4>T</h4>
-								</li>
-							</ul>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>storageKey: <span class="tsd-signature-type">string</span></h5>
-									<div class="tsd-comment tsd-typography">
-										<p>Key to use for local storage</p>
-									</div>
-								</li>
-								<li>
-									<h5>fallbackValue: <span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span></h5>
-									<div class="tsd-comment tsd-typography">
-										<p>Value to return if no entities are found</p>
-									</div>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span></h4>
+							<h4 class="tsd-returns-title">Returns <a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h4>
+							<p>Active ID if it exists, otherwise undefined</p>
 						</li>
 					</ul>
 				</section>
@@ -184,10 +150,10 @@
 						<a href="internal_get_entities.html">internal/get-<wbr>entities</a>
 					</li>
 					<li class="current tsd-kind-module">
-						<a href="internal_hydrate_store.html">internal/hydrate-<wbr>store</a>
+						<a href="internal_hydrate_active_id.html">internal/hydrate-<wbr>active-<wbr>id</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="internal_load_active_id.html">internal/load-<wbr>active-<wbr>id</a>
+						<a href="internal_hydrate_entities.html">internal/hydrate-<wbr>entities</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="internal_normalize.html">internal/normalize</a>
@@ -215,7 +181,7 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-						<a href="internal_hydrate_store.html#hydratestore" class="tsd-kind-icon">hydrate<wbr>Store</a>
+						<a href="internal_hydrate_active_id.html#hydrateactiveid" class="tsd-kind-icon">hydrate<wbr>Active<wbr>Id</a>
 					</li>
 				</ul>
 			</nav>
