--- a/modules/internal_persist_store.html
+++ b/modules/internal_persist_store.html
@@ -72,7 +72,7 @@
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter"><a href="internal_persist_store.html#persiststore" class="tsd-kind-icon">persist<wbr>Store</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter"><a href="internal_persist_store.html#persistStore" class="tsd-kind-icon">persist<wbr>Store</a></li>
 							</ul>
 						</section>
 					</div>
@@ -81,16 +81,16 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-					<a name="persiststore" class="tsd-anchor"></a>
+					<a name="persistStore" class="tsd-anchor"></a>
 					<h3>persist<wbr>Store</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-						<li class="tsd-signature tsd-kind-icon">persist<wbr>Store&lt;T&gt;<span class="tsd-signature-symbol">(</span>store<span class="tsd-signature-symbol">: </span><a href="entity_store.html#entitystore" class="tsd-signature-type" data-tsd-kind="Type alias">EntityStore</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span>, storageKey<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">persist<wbr>Store&lt;T&gt;<span class="tsd-signature-symbol">(</span>store<span class="tsd-signature-symbol">: </span><a href="entity_store.html#EntityStore" class="tsd-signature-type" data-tsd-kind="Type alias">EntityStore</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span>, storageKey<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/internal/persist-store.ts#L12">internal/persist-store.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/db4ea78/src/internal/persist-store.ts#L12">internal/persist-store.ts:12</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -107,7 +107,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>store: <a href="entity_store.html#entitystore" class="tsd-signature-type" data-tsd-kind="Type alias">EntityStore</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h5>
+									<h5>store: <a href="entity_store.html#EntityStore" class="tsd-signature-type" data-tsd-kind="Type alias">EntityStore</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>Store to persist</p>
 									</div>
@@ -129,7 +129,7 @@
 			<nav class="tsd-navigation primary">
 				<ul>
 					<li class=" ">
-						<a href="../modules.html">Exports</a>
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="entity_store.html">entity-<wbr>store</a>
@@ -178,7 +178,7 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-						<a href="internal_persist_store.html#persiststore" class="tsd-kind-icon">persist<wbr>Store</a>
+						<a href="internal_persist_store.html#persistStore" class="tsd-kind-icon">persist<wbr>Store</a>
 					</li>
 				</ul>
 			</nav>
