--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 			<nav class="tsd-navigation primary">
 				<ul>
 					<li class=" ">
-						<a href="modules.html">Exports</a>
+						<a href="modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="modules/entity_store.html">entity-<wbr>store</a>
