--- a/modules/index.html
+++ b/modules/index.html
@@ -72,7 +72,7 @@
 						<section class="tsd-index-section ">
 							<h3>References</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="index.html#entitystore" class="tsd-kind-icon">entity<wbr>Store</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="index.html#entityStore" class="tsd-kind-icon">entity<wbr>Store</a></li>
 							</ul>
 						</section>
 					</div>
@@ -81,9 +81,9 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>References</h2>
 				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-module">
-					<a name="entitystore" class="tsd-anchor"></a>
+					<a name="entityStore" class="tsd-anchor"></a>
 					<h3>entity<wbr>Store</h3>
-					Re-exports <a href="entity_store.html#entitystore-1">entityStore</a>
+					Re-exports <a href="entity_store.html#entityStore">entityStore</a>
 				</section>
 			</section>
 		</div>
@@ -91,7 +91,7 @@
 			<nav class="tsd-navigation primary">
 				<ul>
 					<li class=" ">
-						<a href="../modules.html">Exports</a>
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="entity_store.html">entity-<wbr>store</a>
@@ -140,7 +140,7 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-reference tsd-parent-kind-module">
-						<a href="index.html#entitystore" class="tsd-kind-icon">entity<wbr>Store</a>
+						<a href="index.html#entityStore" class="tsd-kind-icon">entity<wbr>Store</a>
 					</li>
 				</ul>
 			</nav>
