--- a/modules/internal_get_active_entity_id.html
+++ b/modules/internal_get_active_entity_id.html
@@ -72,7 +72,7 @@
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter"><a href="internal_get_active_entity_id.html#getactiveentityid" class="tsd-kind-icon">get<wbr>Active<wbr>Entity<wbr>Id</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter"><a href="internal_get_active_entity_id.html#getActiveEntityId" class="tsd-kind-icon">get<wbr>Active<wbr>Entity<wbr>Id</a></li>
 							</ul>
 						</section>
 					</div>
@@ -81,16 +81,16 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-					<a name="getactiveentityid" class="tsd-anchor"></a>
+					<a name="getActiveEntityId" class="tsd-anchor"></a>
 					<h3>get<wbr>Active<wbr>Entity<wbr>Id</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-						<li class="tsd-signature tsd-kind-icon">get<wbr>Active<wbr>Entity<wbr>Id&lt;T&gt;<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span>state<span class="tsd-signature-symbol">: </span><a href="internal_normalize.html#normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></li>
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Active<wbr>Entity<wbr>Id&lt;T&gt;<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span>state<span class="tsd-signature-symbol">: </span><a href="internal_normalize.html#Normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/internal/get-active-entity-id.ts#L9">internal/get-active-entity-id.ts:9</a></li>
+									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/db4ea78/src/internal/get-active-entity-id.ts#L9">internal/get-active-entity-id.ts:9</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -104,22 +104,22 @@
 									<h4>T</h4>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-symbol">(</span>state<span class="tsd-signature-symbol">: </span><a href="internal_normalize.html#normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-symbol">(</span>state<span class="tsd-signature-symbol">: </span><a href="internal_normalize.html#Normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h4>
 							<p>ID of the active entity</p>
 							<ul class="tsd-parameters">
 								<li class="tsd-parameter-signature">
 									<ul class="tsd-signatures tsd-kind-type-literal">
-										<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>state<span class="tsd-signature-symbol">: </span><a href="internal_normalize.html#normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></li>
+										<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>state<span class="tsd-signature-symbol">: </span><a href="internal_normalize.html#Normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></li>
 									</ul>
 									<ul class="tsd-descriptions">
 										<li class="tsd-description">
 											<h4 class="tsd-parameters-title">Parameters</h4>
 											<ul class="tsd-parameters">
 												<li>
-													<h5>state: <a href="internal_normalize.html#normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h5>
+													<h5>state: <a href="internal_normalize.html#Normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h5>
 												</li>
 											</ul>
-											<h4 class="tsd-returns-title">Returns <a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h4>
+											<h4 class="tsd-returns-title">Returns <a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h4>
 										</li>
 									</ul>
 								</li>
@@ -133,7 +133,7 @@
 			<nav class="tsd-navigation primary">
 				<ul>
 					<li class=" ">
-						<a href="../modules.html">Exports</a>
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="entity_store.html">entity-<wbr>store</a>
@@ -182,7 +182,7 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-						<a href="internal_get_active_entity_id.html#getactiveentityid" class="tsd-kind-icon">get<wbr>Active<wbr>Entity<wbr>Id</a>
+						<a href="internal_get_active_entity_id.html#getActiveEntityId" class="tsd-kind-icon">get<wbr>Active<wbr>Entity<wbr>Id</a>
 					</li>
 				</ul>
 			</nav>
