--- a/modules/internal_hydrate_active_id.html
+++ b/modules/internal_hydrate_active_id.html
@@ -72,7 +72,7 @@
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter"><a href="internal_hydrate_active_id.html#hydrateactiveid" class="tsd-kind-icon">hydrate<wbr>Active<wbr>Id</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter"><a href="internal_hydrate_active_id.html#hydrateActiveId" class="tsd-kind-icon">hydrate<wbr>Active<wbr>Id</a></li>
 							</ul>
 						</section>
 					</div>
@@ -81,16 +81,16 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-					<a name="hydrateactiveid" class="tsd-anchor"></a>
+					<a name="hydrateActiveId" class="tsd-anchor"></a>
 					<h3>hydrate<wbr>Active<wbr>Id</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-						<li class="tsd-signature tsd-kind-icon">hydrate<wbr>Active<wbr>Id&lt;T&gt;<span class="tsd-signature-symbol">(</span>storageKey<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></li>
+						<li class="tsd-signature tsd-kind-icon">hydrate<wbr>Active<wbr>Id&lt;T&gt;<span class="tsd-signature-symbol">(</span>storageKey<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in internal/hydrate-active-id.ts:12</li>
+									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/db4ea78/src/internal/hydrate-active-id.ts#L12">internal/hydrate-active-id.ts:12</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -121,7 +121,7 @@
 									</div>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h4>
 							<p>Active ID if it exists, otherwise undefined</p>
 						</li>
 					</ul>
@@ -132,7 +132,7 @@
 			<nav class="tsd-navigation primary">
 				<ul>
 					<li class=" ">
-						<a href="../modules.html">Exports</a>
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="entity_store.html">entity-<wbr>store</a>
@@ -181,7 +181,7 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-						<a href="internal_hydrate_active_id.html#hydrateactiveid" class="tsd-kind-icon">hydrate<wbr>Active<wbr>Id</a>
+						<a href="internal_hydrate_active_id.html#hydrateActiveId" class="tsd-kind-icon">hydrate<wbr>Active<wbr>Id</a>
 					</li>
 				</ul>
 			</nav>
