--- a/modules/internal_hydrate_entities.html
+++ b/modules/internal_hydrate_entities.html
@@ -72,7 +72,7 @@
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter"><a href="internal_hydrate_entities.html#hydrateentities" class="tsd-kind-icon">hydrate<wbr>Entities</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter"><a href="internal_hydrate_entities.html#hydrateEntities" class="tsd-kind-icon">hydrate<wbr>Entities</a></li>
 							</ul>
 						</section>
 					</div>
@@ -81,7 +81,7 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-					<a name="hydrateentities" class="tsd-anchor"></a>
+					<a name="hydrateEntities" class="tsd-anchor"></a>
 					<h3>hydrate<wbr>Entities</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
 						<li class="tsd-signature tsd-kind-icon">hydrate<wbr>Entities&lt;T&gt;<span class="tsd-signature-symbol">(</span>storageKey<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, fallbackValue<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span></li>
@@ -91,7 +91,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in internal/hydrate-entities.ts:10</li>
+									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/db4ea78/src/internal/hydrate-entities.ts#L10">internal/hydrate-entities.ts:10</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -126,7 +126,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in internal/hydrate-entities.ts:20</li>
+									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/db4ea78/src/internal/hydrate-entities.ts#L20">internal/hydrate-entities.ts:20</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -166,7 +166,7 @@
 			<nav class="tsd-navigation primary">
 				<ul>
 					<li class=" ">
-						<a href="../modules.html">Exports</a>
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="entity_store.html">entity-<wbr>store</a>
@@ -215,7 +215,7 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-						<a href="internal_hydrate_entities.html#hydrateentities" class="tsd-kind-icon">hydrate<wbr>Entities</a>
+						<a href="internal_hydrate_entities.html#hydrateEntities" class="tsd-kind-icon">hydrate<wbr>Entities</a>
 					</li>
 				</ul>
 			</nav>
