--- a/modules/internal_normalize.html
+++ b/modules/internal_normalize.html
@@ -72,7 +72,7 @@
 						<section class="tsd-index-section ">
 							<h3>Type aliases</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter"><a href="internal_normalize.html#normalized" class="tsd-kind-icon">Normalized</a></li>
+								<li class="tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter"><a href="internal_normalize.html#Normalized" class="tsd-kind-icon">Normalized</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -87,12 +87,12 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Type aliases</h2>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter">
-					<a name="normalized" class="tsd-anchor"></a>
+					<a name="Normalized" class="tsd-anchor"></a>
 					<h3>Normalized</h3>
-					<div class="tsd-signature tsd-kind-icon">Normalized&lt;T&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>activeId<span class="tsd-signature-symbol">?: </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a><span class="tsd-signature-symbol">; </span>allIds<span class="tsd-signature-symbol">: </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">; </span>byId<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> }</span></div>
+					<div class="tsd-signature tsd-kind-icon">Normalized&lt;T&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>activeId<span class="tsd-signature-symbol">?: </span><a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a><span class="tsd-signature-symbol">; </span>allIds<span class="tsd-signature-symbol">: </span><a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">; </span>byId<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/internal/normalize.ts#L6">internal/normalize.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/db4ea78/src/internal/normalize.ts#L6">internal/normalize.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -110,7 +110,7 @@
 						<h4>Type declaration</h4>
 						<ul class="tsd-parameters">
 							<li class="tsd-parameter">
-								<h5><span class="tsd-flag ts-flagOptional">Optional</span> active<wbr>Id<span class="tsd-signature-symbol">?: </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h5>
+								<h5><span class="tsd-flag ts-flagOptional">Optional</span> active<wbr>Id<span class="tsd-signature-symbol">?: </span><a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h5>
 								<div class="tsd-comment tsd-typography">
 									<div class="lead">
 										<p>ID of the active entity</p>
@@ -118,7 +118,7 @@
 								</div>
 							</li>
 							<li class="tsd-parameter">
-								<h5>all<wbr>Ids<span class="tsd-signature-symbol">: </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a><span class="tsd-signature-symbol">[]</span></h5>
+								<h5>all<wbr>Ids<span class="tsd-signature-symbol">: </span><a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a><span class="tsd-signature-symbol">[]</span></h5>
 								<div class="tsd-comment tsd-typography">
 									<div class="lead">
 										<p>List of all entities IDs, sorted in the order they were added</p>
@@ -148,13 +148,13 @@
 					<a name="normalize" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagConst">Const</span> normalize</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
-						<li class="tsd-signature tsd-kind-icon">normalize&lt;T&gt;<span class="tsd-signature-symbol">(</span>getID<span class="tsd-signature-symbol">: </span><a href="shared.html#getid" class="tsd-signature-type" data-tsd-kind="Type alias">GetID</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span>, activeId<span class="tsd-signature-symbol">?: </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span>items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="internal_normalize.html#normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">normalize&lt;T&gt;<span class="tsd-signature-symbol">(</span>getID<span class="tsd-signature-symbol">: </span><a href="shared.html#GetID" class="tsd-signature-type" data-tsd-kind="Type alias">GetID</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span>, activeId<span class="tsd-signature-symbol">?: </span><a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">(</span>items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="internal_normalize.html#Normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/internal/normalize.ts#L31">internal/normalize.ts:31</a></li>
+									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/db4ea78/src/internal/normalize.ts#L31">internal/normalize.ts:31</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -174,21 +174,21 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>getID: <a href="shared.html#getid" class="tsd-signature-type" data-tsd-kind="Type alias">GetID</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h5>
+									<h5>getID: <a href="shared.html#GetID" class="tsd-signature-type" data-tsd-kind="Type alias">GetID</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>Function that returns the ID of an entity</p>
 									</div>
 								</li>
 								<li>
-									<h5><span class="tsd-flag ts-flagOptional">Optional</span> activeId: <a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h5>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> activeId: <a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-symbol">(</span>items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="internal_normalize.html#normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-symbol">(</span>items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="internal_normalize.html#Normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h4>
 							<p>Noramlized state holding the given items</p>
 							<ul class="tsd-parameters">
 								<li class="tsd-parameter-signature">
 									<ul class="tsd-signatures tsd-kind-type-literal">
-										<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="internal_normalize.html#normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
+										<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="internal_normalize.html#Normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></li>
 									</ul>
 									<ul class="tsd-descriptions">
 										<li class="tsd-description">
@@ -198,7 +198,7 @@
 													<h5>items: <span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">[]</span></h5>
 												</li>
 											</ul>
-											<h4 class="tsd-returns-title">Returns <a href="internal_normalize.html#normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h4>
+											<h4 class="tsd-returns-title">Returns <a href="internal_normalize.html#Normalized" class="tsd-signature-type" data-tsd-kind="Type alias">Normalized</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></h4>
 										</li>
 									</ul>
 								</li>
@@ -212,7 +212,7 @@
 			<nav class="tsd-navigation primary">
 				<ul>
 					<li class=" ">
-						<a href="../modules.html">Exports</a>
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="entity_store.html">entity-<wbr>store</a>
@@ -261,7 +261,7 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter">
-						<a href="internal_normalize.html#normalized" class="tsd-kind-icon">Normalized</a>
+						<a href="internal_normalize.html#Normalized" class="tsd-kind-icon">Normalized</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module tsd-has-type-parameter">
 						<a href="internal_normalize.html#normalize" class="tsd-kind-icon">normalize</a>
