--- a/modules/shared.html
+++ b/modules/shared.html
@@ -72,17 +72,17 @@
 						<section class="tsd-index-section ">
 							<h3>Type aliases</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="shared.html#entitystoreoptions" class="tsd-kind-icon">Entity<wbr>Store<wbr>Options</a></li>
-								<li class="tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter"><a href="shared.html#getid" class="tsd-kind-icon">GetID</a></li>
-								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="shared.html#id" class="tsd-kind-icon">ID</a></li>
-								<li class="tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter"><a href="shared.html#predicate" class="tsd-kind-icon">Predicate</a></li>
+								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="shared.html#EntityStoreOptions" class="tsd-kind-icon">Entity<wbr>Store<wbr>Options</a></li>
+								<li class="tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter"><a href="shared.html#GetID" class="tsd-kind-icon">GetID</a></li>
+								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="shared.html#ID" class="tsd-kind-icon">ID</a></li>
+								<li class="tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter"><a href="shared.html#Predicate" class="tsd-kind-icon">Predicate</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="shared.html#haslocalstorage" class="tsd-kind-icon">has<wbr>Local<wbr>Storage</a></li>
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="shared.html#isid" class="tsd-kind-icon">isID</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="shared.html#hasLocalStorage" class="tsd-kind-icon">has<wbr>Local<wbr>Storage</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="shared.html#isID" class="tsd-kind-icon">isID</a></li>
 							</ul>
 						</section>
 					</div>
@@ -91,12 +91,12 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Type aliases</h2>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
-					<a name="entitystoreoptions" class="tsd-anchor"></a>
+					<a name="EntityStoreOptions" class="tsd-anchor"></a>
 					<h3>Entity<wbr>Store<wbr>Options</h3>
 					<div class="tsd-signature tsd-kind-icon">Entity<wbr>Store<wbr>Options<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>persist<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">true</span><span class="tsd-signature-symbol">; </span>storageKey<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-symbol">{ </span>persist<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">false</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/shared.ts#L53">shared.ts:53</a></li>
+							<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/db4ea78/src/shared.ts#L53">shared.ts:53</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -123,19 +123,14 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter">
-					<a name="getid" class="tsd-anchor"></a>
+					<a name="GetID" class="tsd-anchor"></a>
 					<h3>GetID</h3>
-					<div class="tsd-signature tsd-kind-icon">GetID&lt;T&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>t<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></div>
+					<div class="tsd-signature tsd-kind-icon">GetID&lt;T&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>t<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/shared.ts#L21">shared.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/db4ea78/src/shared.ts#L21">shared.ts:21</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Function used to get the unique ID of an entity</p>
-						</div>
-					</div>
 					<h4 class="tsd-type-parameters-title">Type parameters</h4>
 					<ul class="tsd-type-parameters">
 						<li>
@@ -147,17 +142,22 @@
 						<ul class="tsd-parameters">
 							<li class="tsd-parameter-signature">
 								<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-type-alias">
-									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>t<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></li>
+									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>t<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></li>
 								</ul>
 								<ul class="tsd-descriptions">
 									<li class="tsd-description">
+										<div class="tsd-comment tsd-typography">
+											<div class="lead">
+												<p>Function used to get the unique ID of an entity</p>
+											</div>
+										</div>
 										<h4 class="tsd-parameters-title">Parameters</h4>
 										<ul class="tsd-parameters">
 											<li>
 												<h5>t: <span class="tsd-signature-type">T</span></h5>
 											</li>
 										</ul>
-										<h4 class="tsd-returns-title">Returns <a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h4>
+										<h4 class="tsd-returns-title">Returns <a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h4>
 									</li>
 								</ul>
 							</li>
@@ -165,12 +165,12 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
-					<a name="id" class="tsd-anchor"></a>
+					<a name="ID" class="tsd-anchor"></a>
 					<h3>ID</h3>
 					<div class="tsd-signature tsd-kind-icon">ID<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/shared.ts#L4">shared.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/db4ea78/src/shared.ts#L4">shared.ts:4</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -180,19 +180,14 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter">
-					<a name="predicate" class="tsd-anchor"></a>
+					<a name="Predicate" class="tsd-anchor"></a>
 					<h3>Predicate</h3>
 					<div class="tsd-signature tsd-kind-icon">Predicate&lt;T&gt;<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span>t<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/shared.ts#L26">shared.ts:26</a></li>
+							<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/db4ea78/src/shared.ts#L26">shared.ts:26</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Predicate used for filtering entities</p>
-						</div>
-					</div>
 					<h4 class="tsd-type-parameters-title">Type parameters</h4>
 					<ul class="tsd-type-parameters">
 						<li>
@@ -208,6 +203,11 @@
 								</ul>
 								<ul class="tsd-descriptions">
 									<li class="tsd-description">
+										<div class="tsd-comment tsd-typography">
+											<div class="lead">
+												<p>Predicate used for filtering entities</p>
+											</div>
+										</div>
 										<h4 class="tsd-parameters-title">Parameters</h4>
 										<ul class="tsd-parameters">
 											<li>
@@ -225,7 +225,7 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-module">
-					<a name="haslocalstorage" class="tsd-anchor"></a>
+					<a name="hasLocalStorage" class="tsd-anchor"></a>
 					<h3>has<wbr>Local<wbr>Storage</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module">
 						<li class="tsd-signature tsd-kind-icon">has<wbr>Local<wbr>Storage<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span></li>
@@ -234,7 +234,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/shared.ts#L33">shared.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/db4ea78/src/shared.ts#L33">shared.ts:33</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -248,16 +248,16 @@
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-module">
-					<a name="isid" class="tsd-anchor"></a>
+					<a name="isID" class="tsd-anchor"></a>
 					<h3>isID</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module">
-						<li class="tsd-signature tsd-kind-icon">isID<span class="tsd-signature-symbol">(</span>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">value</span><span class="tsd-signature-symbol"> is </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></li>
+						<li class="tsd-signature tsd-kind-icon">isID<span class="tsd-signature-symbol">(</span>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">value</span><span class="tsd-signature-symbol"> is </span><a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/d3d5064/src/shared.ts#L12">shared.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/AminoffZ/svelte-entity-store/blob/db4ea78/src/shared.ts#L12">shared.ts:12</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -271,7 +271,7 @@
 									<h5>value: <span class="tsd-signature-type">unknown</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">value</span><span class="tsd-signature-symbol"> is </span><a href="shared.html#id" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">value</span><span class="tsd-signature-symbol"> is </span><a href="shared.html#ID" class="tsd-signature-type" data-tsd-kind="Type alias">ID</a></h4>
 							<p>true if the value is an ID (string or number), false otherwise</p>
 						</li>
 					</ul>
@@ -282,7 +282,7 @@
 			<nav class="tsd-navigation primary">
 				<ul>
 					<li class=" ">
-						<a href="../modules.html">Exports</a>
+						<a href="../modules.html">Modules</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="entity_store.html">entity-<wbr>store</a>
@@ -331,22 +331,22 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
-						<a href="shared.html#entitystoreoptions" class="tsd-kind-icon">Entity<wbr>Store<wbr>Options</a>
+						<a href="shared.html#EntityStoreOptions" class="tsd-kind-icon">Entity<wbr>Store<wbr>Options</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter">
-						<a href="shared.html#getid" class="tsd-kind-icon">GetID</a>
+						<a href="shared.html#GetID" class="tsd-kind-icon">GetID</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
-						<a href="shared.html#id" class="tsd-kind-icon">ID</a>
+						<a href="shared.html#ID" class="tsd-kind-icon">ID</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter">
-						<a href="shared.html#predicate" class="tsd-kind-icon">Predicate</a>
+						<a href="shared.html#Predicate" class="tsd-kind-icon">Predicate</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="shared.html#haslocalstorage" class="tsd-kind-icon">has<wbr>Local<wbr>Storage</a>
+						<a href="shared.html#hasLocalStorage" class="tsd-kind-icon">has<wbr>Local<wbr>Storage</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="shared.html#isid" class="tsd-kind-icon">isID</a>
+						<a href="shared.html#isID" class="tsd-kind-icon">isID</a>
 					</li>
 				</ul>
 			</nav>
